--- a/app/views/login/signup.html
+++ b/app/views/login/signup.html
@@ -8,6 +8,9 @@
       <div class="modal-body">
       	
       	<md-content>
+
+<global-messagebar message-type="vm.messageType" message-bar-message="vm.messageBarMessage"></global-messagebar>
+        
     <md-tabs md-dynamic-height md-border-bottom md-stretch-tabs="always">
       <md-tab label="User">
         <md-content class="md-padding">
@@ -70,7 +73,7 @@
           	<span style="color:brown;" ng-show="(form.signupFormVendor.confirmPassword.$touched || form.signupFormVendor.$submitted) && form.signupFormVendor.confirmPassword.$invalid">Confirm your Password</span>
           </div>
           
-          <div class="form-group"><label>Brand Name</label><input class="form-control required" placeholder="Your Brand Name" type="text" ng-model="vm.signupVendor.brandName" name="brandName"></input>
+          <div class="form-group"><label>Brand Name</label><input class="form-control required" placeholder="Your Brand Name" type="text" ng-model="vm.signupVendor.entityName" name="entityName"></input>
           </div>
           
           <div class="form-group"><label class="required">Select Vendor Type</label><br/>
