--- a/app/views/giveReview/giveReview.html
+++ b/app/views/giveReview/giveReview.html
@@ -3,14 +3,14 @@
 <div layout="column" layout-padding>
 	<div layout="row" layout-align="start center">
 	<div flex="40" class="md-title">Rate this vendor:</div> 
-	<ng-rating ng-model="vendorRating" editable="editable" show-grade="showGrade" stars-count="starsCount"></ng-rating>
+	<ng-rating ng-model="vendorRating" editable="editable" show-grade="showGrade" stars-count="starsCount" ng-click="allowPostingReview({e: $event});"></ng-rating>
 	</div>
 	<div>
-		<textarea ng-model="reviewComment" aria-label="Review Comment" placeholder="Share your experience with us..." layout-fill style="min-height: 100px;" required></textarea>
+		<textarea ng-model="reviewComment" aria-label="Review Comment" placeholder="Share your experience with us..." layout-fill style="min-height: 100px;" required ng-focus="allowPostingReview({e: $event});"></textarea>
 	</div>
 	<div>
 		<md-input-container class="md-block">
-						<input ng-model="reviewMoney"  name="money" type="number" placeholder="Tell us your spendings on this vendor (Optional)">				
+						<input ng-model="reviewMoney"  name="money" type="number" placeholder="Tell us your spendings on this vendor (Optional)" ng-focus="allowPostingReview({e: $event});">				
 					</md-input-container>
 	</div>
 	<div>
