checking in changes for google login

--- a/app/views/login/signin.html
+++ b/app/views/login/signin.html
@@ -17,8 +17,8 @@
       <md-tab label="User">
         <md-content class="md-padding">
         	<div class="social-buttons">
-									<a href="#" class="btn btn-fb" ng-click="fbLogin()"><i class="fa fa-facebook"></i> Facebook</a>
-									<a href="#" class="btn btn-gg" ng-click="googleLogin()"><i class="fa fa-google"></i> Google</a>
+									<a href="#" class="btn btn-fb" ng-click="vm.fbLogin()"><i class="fa fa-facebook"></i> Facebook</a>
+									<a href="#" class="btn btn-gg" ng-click="vm.googleLogin()"><i class="fa fa-google"></i> Google</a>
 								</div>
 								<hr>
 								<div class="text-center">OR</div>
