--- a/app/views/login/signup.html
+++ b/app/views/login/signup.html
@@ -14,15 +14,15 @@
     <md-tabs md-dynamic-height md-border-bottom md-stretch-tabs="always">
       <md-tab label="User">
         <md-content class="md-padding">
-        	<div class="social-buttons">
+        	<!--<div class="social-buttons">
 									<a href="javascript:void(0)" class="btn btn-fb"><i class="fa fa-facebook"></i> Facebook</a>
 									<a href="javascript:void(0)" class="btn btn-gg"><i class="fa fa-google"></i> Google</a>
 								</div>
-								<!--
-								<hr>
-																<div class="text-center">OR</div>-->
 								
-      		<hr>
+								<hr>
+																<div class="text-center">OR</div>
+								
+      		<hr>-->
         <form name="form.signupFormUser" class="col-sm-12" novalidate>
         
         <div class="form-group" style="margin-top:10px;"><label class="required">Name</label><input class="form-control required" placeholder="Your Name" type="text" ng-model="vm.signupUser.name" name="name" required>
