ui validations on forms

--- a/app/views/detail/detail.html
+++ b/app/views/detail/detail.html
@@ -490,7 +490,7 @@
 		</div>
 	</div>
 
-<give-review editable="true" vendor-rating="vm.newReviewModel.vendorRating" stars-count="5" show-grade="true" review-money="vm.newReviewModel.reviewMoney" review-comment="vm.newReviewModel.reviewComment" submit-review="vm.newReviewModel.submitReview();" apply-margin="true" allow-posting-review="vm.newReviewModel.allowPostingReview(e);" review-submitted="vm.reviewSubmitted"></give-review>
+<give-review editable="true" vendor-rating="vm.newReviewModel.vendorRating" stars-count="5" show-grade="true" review-money="vm.newReviewModel.reviewMoney" review-comment="vm.newReviewModel.reviewComment" submit-review="vm.newReviewModel.submitReview();" apply-margin="true" allow-posting-review="vm.newReviewModel.allowPostingReview(e);" review-submitted="vm.reviewSubmitted" show-validation-errors="vm.showValidationErrors"></give-review>
 
 <div class="row bg-grey">
 	<div class="gap20"></div>
