--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1169,6 +1169,14 @@ md-input-container #captcha input{
 	line-height: 24px;
 }
 
+.validation-err-msg{
+	color: rgb(221,44,0);
+	font-size: 12px;
+	padding-top: 5px;
+	padding-right: 5px;
+	line-height: 14px;
+}
+
 .bg-white{
 	background: rgb(255, 255, 255);
 }
