--- a/app/views/login/signin.html
+++ b/app/views/login/signin.html
@@ -26,11 +26,11 @@
         <form name="form.signinFormUser" class="col-sm-12" novalidate>
         	
         <div class="form-group" style="margin-top:10px;"><label class="required">Email</label><input class="form-control required" placeholder="Your email address" type="email" ng-model="vm.signinUser.email" name="email" required ng-pattern="/^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/">
-          <span style="color:brown;" ng-show="(form.signinFormUser.email.$touched || form.signinFormUser.$submitted) && form.signinFormUser.email.$invalid">Email is invalid.</span>
+          <span class="validation-err-msg" ng-show="(form.signinFormUser.email.$touched || form.signinFormUser.$submitted) && form.signinFormUser.email.$invalid">Email is invalid.</span>
       	</div>
 
           <div class="form-group"><label class="required">Password</label><input class="form-control required" placeholder="Your password" type="password" ng-model="vm.signinUser.password" name="password" required></input>
-          	<span style="color:brown;" ng-show="(form.signinFormUser.password.$touched || form.signinFormUser.$submitted) && form.signinFormUser.password.$invalid">Password is invalid.</span>
+          	<span class="validation-err-msg" ng-show="(form.signinFormUser.password.$touched || form.signinFormUser.$submitted) && form.signinFormUser.password.$invalid">Password is invalid.</span>
           </div>
 					
 		
@@ -56,11 +56,11 @@
         <form name="form.signinFormVendor" class="col-sm-12" novalidate>
         	
         <div class="form-group" style="margin-top:10px;"><label class="required">Email</label><input class="form-control required" placeholder="Your email address" type="email" ng-model="vm.signinVendor.email" name="email" required ng-pattern="/^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/">
-          <span style="color:brown;" ng-show="(form.signinFormVendor.email.$touched || form.signinFormVendor.$submitted) && form.signinFormVendor.email.$invalid">Email is invalid.</span>
+          <span class="validation-err-msg" ng-show="(form.signinFormVendor.email.$touched || form.signinFormVendor.$submitted) && form.signinFormVendor.email.$invalid">Email is invalid.</span>
       	</div>
 
           <div class="form-group"><label class="required">Password</label><input class="form-control required" placeholder="Your password" type="password" ng-model="vm.signinVendor.password" name="password" required></input>
-          	<span style="color:brown;" ng-show="(form.signinFormVendor.password.$touched || form.signinFormVendor.$submitted) && form.signinFormVendor.password.$invalid">Password is invalid.</span>
+          	<span class="validation-err-msg" ng-show="(form.signinFormVendor.password.$touched || form.signinFormVendor.$submitted) && form.signinFormVendor.password.$invalid">Password is invalid.</span>
           </div>
 		
 		<div class="text-right fogot-pwd">
