--- a/app/views/login/signup.html
+++ b/app/views/login/signup.html
@@ -26,19 +26,21 @@
         <form name="form.signupFormUser" class="col-sm-12" novalidate>
         
         <div class="form-group" style="margin-top:10px;"><label class="required">Name</label><input class="form-control required" placeholder="Your Name" type="text" ng-model="vm.signupUser.name" name="name" required>
-          <span style="color:brown;" ng-show="(form.signupFormUser.name.$touched || form.signupFormUser.$submitted) && form.signupFormUser.name.$invalid">Name is mandatory.</span>
+          <span class="validation-err-msg" ng-show="(form.signupFormUser.name.$touched || form.signupFormUser.$submitted) && form.signupFormUser.name.$invalid">Name is mandatory.</span>
       	</div>	
         	
         <div class="form-group" style="margin-top:10px;"><label class="required">Email</label><input class="form-control required" placeholder="Your email address" type="email" ng-model="vm.signupUser.email" name="email" required ng-pattern="/^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/">
-          <span style="color:brown;" ng-show="(form.signupFormUser.email.$touched || form.signupFormUser.$submitted) && form.signupFormUser.email.$invalid">Email is mandatory.</span>
+          <span class="validation-err-msg" ng-show="(form.signupFormUser.email.$touched || form.signupFormUser.$submitted) && form.signupFormUser.email.$invalid && form.signupFormUser.email.$error.required">Email is mandatory.</span>
+          <span class="validation-err-msg" ng-show="(form.signupFormUser.email.$touched || form.signupFormUser.$submitted) && form.signupFormUser.email.$invalid && form.signupFormUser.email.$error.pattern">Kindly give a valid Email Address</span>
       	</div>
 
           <div class="form-group"><label class="required">Password</label><input class="form-control required" placeholder="Your password" type="password" ng-model="vm.signupUser.password" name="password" required></input>
-          	<span style="color:brown;" ng-show="(form.signupFormUser.password.$touched || form.signupFormUser.$submitted) && form.signupFormUser.password.$invalid">Password is mandatory.</span>
+          	<span class="validation-err-msg" ng-show="(form.signupFormUser.password.$touched || form.signupFormUser.$submitted) && form.signupFormUser.password.$invalid">Password is mandatory.</span>
           </div>
           
-           <div class="form-group"><label class="required">Confirm Password</label><input class="form-control required" placeholder="Retype password" type="password" ng-model="vm.signupUser.confirmPassword" name="confirmPassword" required></input>
-          	<span style="color:brown;" ng-show="(form.signupFormUser.confirmPassword.$touched || form.signupFormUser.$submitted) && form.signupFormUser.confirmPassword.$invalid">Confirm your Password</span>
+           <div class="form-group"><label class="required">Confirm Password</label><input class="form-control required" placeholder="Retype password" type="password" ng-model="vm.signupUser.confirmPassword" name="confirmPassword" confirm-password="vm.signupUser.password" required></input>
+          	<span class="validation-err-msg" ng-show="(form.signupFormUser.confirmPassword.$touched || form.signupFormUser.$submitted) && form.signupFormUser.confirmPassword.$invalid">Confirm your Password</span>
+          	<span class="validation-err-msg" ng-show="(form.signupFormUser.confirmPassword.$touched || form.signupFormUser.$submitted) && form.signupFormUser.confirmPassword.$error.confirmpassword">Password and Confirm Password does not match</span>
           </div>
 		
 		<div>	
@@ -58,19 +60,21 @@
         <form name="form.signupFormVendor" class="col-sm-12" novalidate>
         
         <div class="form-group" style="margin-top:10px;"><label class="required">Name</label><input class="form-control required" placeholder="Your Name" type="text" ng-model="vm.signupVendor.name" name="name" required>
-          <span style="color:brown;" ng-show="(form.signupFormVendor.name.$touched || form.signupFormVendor.$submitted) && form.signupFormVendor.name.$invalid">Name is mandatory.</span>
+          <span class="validation-err-msg" ng-show="(form.signupFormVendor.name.$touched || form.signupFormVendor.$submitted) && form.signupFormVendor.name.$invalid">Name is mandatory.</span>
       	</div>	
         	
         <div class="form-group" style="margin-top:10px;"><label class="required">Email</label><input class="form-control required" placeholder="Your email address" type="email" ng-model="vm.signupVendor.email" name="email" required ng-pattern="/^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/">
-          <span style="color:brown;" ng-show="(form.signupFormVendor.email.$touched || form.signupFormVendor.$submitted) && form.signupFormVendor.email.$invalid">Email is mandatory.</span>
+          <span class="validation-err-msg" ng-show="(form.signupFormVendor.email.$touched || form.signupFormVendor.$submitted) && form.signupFormVendor.email.$invalid && form.signupFormVendor.email.$error.required">Email is mandatory.</span>
+          <span class="validation-err-msg" ng-show="(form.signupFormVendor.email.$touched || form.signupFormVendor.$submitted) && form.signupFormVendor.email.$invalid && form.signupFormVendor.email.$error.pattern">Kindly give a valid Email Address</span>
       	</div>
 
           <div class="form-group"><label class="required">Password</label><input class="form-control required" placeholder="Your password" type="password" ng-model="vm.signupVendor.password" name="password" required></input>
-          	<span style="color:brown;" ng-show="(form.signupFormVendor.password.$touched || form.signupFormVendor.$submitted) && form.signupFormVendor.password.$invalid">Password is mandatory.</span>
+          	<span class="validation-err-msg" ng-show="(form.signupFormVendor.password.$touched || form.signupFormVendor.$submitted) && form.signupFormVendor.password.$invalid">Password is mandatory.</span>
           </div>
           
-           <div class="form-group"><label class="required">Confirm Password</label><input class="form-control required" placeholder="Retype password" type="password" ng-model="vm.signupVendor.confirmPassword" name="confirmPassword" required></input>
-          	<span style="color:brown;" ng-show="(form.signupFormVendor.confirmPassword.$touched || form.signupFormVendor.$submitted) && form.signupFormVendor.confirmPassword.$invalid">Confirm your Password</span>
+           <div class="form-group"><label class="required">Confirm Password</label><input class="form-control required" placeholder="Retype password" type="password" ng-model="vm.signupVendor.confirmPassword" name="confirmPassword" confirm-password="vm.signupVendor.password" required></input>
+          	<span class="validation-err-msg" ng-show="(form.signupFormVendor.confirmPassword.$touched || form.signupFormVendor.$submitted) && form.signupFormVendor.confirmPassword.$e">Confirm your Password</span>
+          	<span class="validation-err-msg" ng-show="(form.signupFormVendor.confirmPassword.$touched || form.signupFormVendor.$submitted) && form.signupFormVendor.confirmPassword.$error.confirmpassword">Password and Confirm Password fields does not match</span>
           </div>
           
           <div class="form-group"><label>Brand Name</label><input class="form-control required" placeholder="Your Brand Name" type="text" ng-model="vm.signupVendor.entityName" name="entityName"></input>
@@ -85,7 +89,7 @@
           		<option value="entertainment">ENTERTAINMENT</option>
           		<option value="other">OTHERS</option>
           	</select>
-          	<span style="color:brown;" ng-show="(form.signupFormVendor.vendorType.$touched || form.signupFormVendor.$submitted) && form.signupFormVendor.vendorType.$invalid">Please select a Vendor Type</span>
+          	<span class="validation-err-msg" ng-show="(form.signupFormVendor.vendorType.$touched || form.signupFormVendor.$submitted) && form.signupFormVendor.vendorType.$invalid">Please select a Vendor Type</span>
           </div>
 		
 		<div>	
