--- a/app/views/login/forgotpwd.html
+++ b/app/views/login/forgotpwd.html
@@ -12,7 +12,7 @@
         	
         	
         <div class="form-group" style="margin-top:10px;"><label class="required">Email</label><input class="form-control required" placeholder="Your email address" type="email" ng-model="vm.fgtpwdForm.email" name="email" required ng-pattern="/^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/">
-          <span style="color:brown;" ng-show="(form.fgtpwdForm.email.$touched || form.fgtpwdForm.$submitted) && form.fgtpwdForm.email.$invalid">Email is invalid.</span>
+          <span class="validation-err-msg" ng-show="(form.fgtpwdForm.email.$touched || form.fgtpwdForm.$submitted) && form.fgtpwdForm.email.$invalid">Email is invalid.</span>
       	</div>
 
 		
