--- a/app/views/login/resetpwd.html
+++ b/app/views/login/resetpwd.html
@@ -7,20 +7,21 @@
       </div>
       <div class="modal-body">
       	
-      	<div class="errMessage" ng-show="vm.errorMsg.length > 0" style="color:brown;"><i class="material-icons" style="vertical-align: bottom;">highlight_off</i>{{vm.errorMsg}}</div>
+      	<div class="errMessage" ng-show="vm.errorMsg.length > 0" class="validation-err-msg"><i class="material-icons" style="vertical-align: bottom;">highlight_off</i>{{vm.errorMsg}}</div>
         <form name="form.resetpwdForm" class="col-sm-12" novalidate>
         	
         	
         <div class="form-group" style="margin-top:10px;"><label class="required">Old Password</label><input class="form-control required" placeholder="Your Old Password" type="password" ng-model="vm.resetpwdForm.oldPassword" name="oldPassword" required>
-          <span style="color:brown;" ng-show="(form.resetpwdForm.oldPassword.$touched || vm.submitted) && form.resetpwdForm.oldPassword.$invalid">Old Password is Required</span>
+          <span class="validation-err-msg" ng-show="(form.resetpwdForm.oldPassword.$touched || vm.submitted) && form.resetpwdForm.oldPassword.$invalid">Old Password is Required</span>
       	</div>
       	
       	<div class="form-group" style="margin-top:10px;"><label class="required">New Password</label><input class="form-control required" placeholder="Your New Password" type="password" ng-model="vm.resetpwdForm.newPassword" name="newPassword" required>
-          <span style="color:brown;" ng-show="(form.resetpwdForm.newPassword.$touched || vm.submitted) && form.resetpwdForm.newPassword.$invalid">New Password is Required</span>
+          <span class="validation-err-msg" ng-show="(form.resetpwdForm.newPassword.$touched || vm.submitted) && form.resetpwdForm.newPassword.$invalid">New Password is Required</span>
       	</div>
       	
-      	<div class="form-group" style="margin-top:10px;"><label class="required">Confirm New Password</label><input class="form-control required" placeholder="Confirm New Password" type="password" ng-model="vm.resetpwdForm.confirmNewPassword" name="confirmNewPassword" required>
-          <span style="color:brown;" ng-show="(form.resetpwdForm.confirmNewPassword.$touched || vm.submitted) && form.resetpwdForm.confirmNewPassword.$invalid">Old Password is Required</span>
+      	<div class="form-group" style="margin-top:10px;"><label class="required">Confirm New Password</label><input class="form-control required" placeholder="Confirm New Password" type="password" ng-model="vm.resetpwdForm.confirmNewPassword" confirm-password="vm.resetpwdForm.newPassword" name="confirmNewPassword" required>
+          <span class="validation-err-msg" ng-show="(form.resetpwdForm.confirmNewPassword.$touched || form.resetpwdForm.$submitted) && form.resetpwdForm.confirmNewPassword.$error.required">Confirm New Password is Required</span>
+          <span class="validation-err-msg" ng-show="(form.resetpwdForm.confirmNewPassword.$touched || form.resetpwdForm.$submitted) && form.resetpwdForm.confirmNewPassword.$error.$confirmpassword">New Password and Confirm New Password does not match</span>
       	</div>
 
 		
