--- a/app/views/detail/detail.html
+++ b/app/views/detail/detail.html
@@ -518,29 +518,29 @@
 			</div>
 			<div class="pamphlet-body">
 				<form name="form.detailsPageContactForm" novalidate>
-					<span style="color:brown;">All Fields marked with * are mandatory.</span>
+					<span class="validation-err-msg">All Fields marked with * are mandatory.</span>
 					<div class="form-group" style="margin-top:10px;">
 						<label class="required">Name</label>
 						<input class="form-control required" placeholder="Your name" type="text" ng-model="vm.detailsPageContactForm.name" name="name" required>
-						<span style="color:brown;" ng-show="(form.detailsPageContactForm.name.$touched || vm.detailsPageFormSubmitted) && form.detailsPageContactForm.name.$invalid">Name is mandatory.</span>
+						<span class="validation-err-msg" ng-show="(form.detailsPageContactForm.name.$touched || vm.detailsPageFormSubmitted) && form.detailsPageContactForm.name.$invalid">Name is mandatory.</span>
 					</div>
 
 					<div class="form-group">
 						<label class="required">Message</label>						<textarea class="form-control" placeholder="Your message here.." ng-model="vm.detailsPageContactForm.message" name="message" required></textarea>
-						<span style="color:brown;" ng-show="(form.detailsPageContactForm.message.$touched || vm.detailsPageFormSubmitted) && form.detailsPageContactForm.message.$invalid">Message is mandatory.</span>
+						<span class="validation-err-msg" ng-show="(form.detailsPageContactForm.message.$touched || vm.detailsPageFormSubmitted) && form.detailsPageContactForm.message.$invalid">Message is mandatory.</span>
 					</div>
 
 					<div class="form-group">
 						<label>E-Mail</label>
 						<input class="form-control email" placeholder="email@you.com" type="email" name="email" ng-model="vm.detailsPageContactForm.email" ng-pattern="/^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/">
-						<span style="color:brown;" ng-show="form.detailsPageContactForm.email.$touched && form.detailsPageContactForm.email.$error.pattern">Email is invalid.</span>
+						<span class="validation-err-msg" ng-show="form.detailsPageContactForm.email.$touched && form.detailsPageContactForm.email.$error.pattern">Email is invalid.</span>
 					</div>
 
 					<div class="form-group">
 						<label class="required">Phone</label>
 						<input class="form-control phone" type="text" ng-model="vm.detailsPageContactForm.phoneNumber" placeholder="Your Contact Number" name="phone" required ng-pattern="/^[0-9]{10}$/">
-						<span style="color:brown;" ng-show="(form.detailsPageContactForm.phone.$touched || vm.detailsPageFormSubmitted) && form.detailsPageContactForm.phone.$error.required">Phone is mandatory.</span>
-						<span style="color:brown;" ng-show="form.detailsPageContactForm.phone.$error.pattern">Invalid Phone Number</span>
+						<span class="validation-err-msg" ng-show="(form.detailsPageContactForm.phone.$touched || vm.detailsPageFormSubmitted) && form.detailsPageContactForm.phone.$error.required">Phone is mandatory.</span>
+						<span class="validation-err-msg" ng-show="form.detailsPageContactForm.phone.$error.pattern">Invalid Phone Number</span>
 					</div>
 
 					<div class="form-group">
@@ -548,7 +548,7 @@
 						<div id="detailsPageCaptcha">
 
 						</div>
-						<span style="color:brown;" ng-show="vm.detailsPageFormSubmitted && !captchaValid">Captcha is Invalid.</span>
+						<span class="validation-err-msg" ng-show="vm.detailsPageFormSubmitted && !captchaValid">Captcha is Invalid.</span>
 					</div>
 
 					<button type="button" ng-click="vm.detailsPageFormSubmitted=true;form.detailsPageContactForm.$valid && captchaValid &&vm.detailsPageFormSubmit();" class="btn btn-success">
