--- a/app/views/home/contactus.html
+++ b/app/views/home/contactus.html
@@ -9,29 +9,29 @@
 			</div>
 			<div class="modal-body">
 				<form name="form.contactForm" class="col-sm-12" novalidate>
-					<!--<span style="color:brown;">All Fields marked with * are mandatory.</span>
+					<!--<span class="validation-err-msg">All Fields marked with * are mandatory.</span>
 					<div class="form-group" style="margin-top:10px;"><label class="required">Name</label><input class="form-control required" placeholder="Your name" type="text" ng-model="vm.contactForm.name" name="name" required>
-					<span style="color:brown;" ng-show="(form.contactForm.name.$touched || vm.submitted) && form.contactForm.name.$invalid">Name is mandatory.</span>
+					<span class="validation-err-msg" ng-show="(form.contactForm.name.$touched || vm.submitted) && form.contactForm.name.$invalid">Name is mandatory.</span>
 					</div>
 
 					<div class="form-group"><label class="required">Message</label><textarea class="form-control" placeholder="Your message here.." ng-model="vm.contactForm.message" name="message" required></textarea>
-					<span style="color:brown;" ng-show="(form.contactForm.message.$touched || vm.submitted) && form.contactForm.message.$invalid">Message is mandatory.</span>
+					<span class="validation-err-msg" ng-show="(form.contactForm.message.$touched || vm.submitted) && form.contactForm.message.$invalid">Message is mandatory.</span>
 					</div>
 
 					<div class="form-group"><label>E-Mail</label><input class="form-control email" placeholder="email@you.com (so that we can contact you)" type="email" name="email" ng-model="vm.contactForm.email" ng-pattern="/^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/">
-					<span style="color:brown;" ng-show="form.contactForm.email.$touched && form.contactForm.email.$error.pattern">Email is invalid.</span>
+					<span class="validation-err-msg" ng-show="form.contactForm.email.$touched && form.contactForm.email.$error.pattern">Email is invalid.</span>
 					</div>
 
 					<div class="form-group"><label class="required">Phone</label><input class="form-control phone" type="text" ng-model="vm.contactForm.phoneNumber" placeholder="Your Contact Number" name="phone" required ng-pattern="/^[0-9]{10}$/">
-					<span style="color:brown;" ng-show="(form.contactForm.phone.$touched || vm.submitted) && form.contactForm.phone.$error.required">Phone is mandatory.</span>
-					<span style="color:brown;" ng-show="form.contactForm.phone.$touched  && form.contactForm.phone.$error.pattern">Phone is Invalid.</span>
+					<span class="validation-err-msg" ng-show="(form.contactForm.phone.$touched || vm.submitted) && form.contactForm.phone.$error.required">Phone is mandatory.</span>
+					<span class="validation-err-msg" ng-show="form.contactForm.phone.$touched  && form.contactForm.phone.$error.pattern">Phone is Invalid.</span>
 					</div>
 
 					<div class="form-group"><label class="required">Test your math skill</label>
 					<div id="captcha">
 
 					</div>
-					<span style="color:brown;" ng-show="vm.submitted && !captchaValid">Captcha is Invalid.</span>
+					<span class="validation-err-msg" ng-show="vm.submitted && !captchaValid">Captcha is Invalid.</span>
 					</div>-->
 
 					<md-input-container class="md-icon-float md-block">
@@ -39,7 +39,7 @@
 						<label>Name</label>
 						<md-icon class="material-icons dodgerblue-color">face</md-icon>
 						<input ng-model="vm.contactForm.name" name="name" required type="text">
-						<span style="color:brown;" ng-show="(form.contactForm.name.$touched || vm.submitted) && form.contactForm.name.$invalid">Name is mandatory.</span>
+						<span class="validation-err-msg" ng-show="(form.contactForm.name.$touched || vm.submitted) && form.contactForm.name.$invalid">Name is mandatory.</span>
 					</md-input-container>
 					
 					<md-input-container class="md-icon-float md-block">
@@ -47,7 +47,7 @@
 						<label>Message</label>
 						<md-icon class="material-icons dodgerblue-color">assignment</md-icon>
 						<input ng-model="vm.contactForm.message" name="message" required type="text">
-						<span style="color:brown;" ng-show="(form.contactForm.message.$touched || vm.submitted) && form.contactForm.message.$invalid">Message is mandatory.</span>
+						<span class="validation-err-msg" ng-show="(form.contactForm.message.$touched || vm.submitted) && form.contactForm.message.$invalid">Message is mandatory.</span>
 					</md-input-container>
 					
 					<md-input-container class="md-icon-float md-block">
@@ -55,7 +55,7 @@
 						<label>E-Mail</label>
 						<md-icon class="material-icons dodgerblue-color">email</md-icon>
 						<input name="email" ng-model="vm.contactForm.email" ng-pattern="/^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/" type="email">
-						<span style="color:brown;" ng-show="form.contactForm.email.$touched && form.contactForm.email.$error.pattern">Email is invalid.</span>
+						<span class="validation-err-msg" ng-show="form.contactForm.email.$touched && form.contactForm.email.$error.pattern">Email is invalid.</span>
 					</md-input-container>
 					
 					<md-input-container class="md-icon-float md-block">
@@ -63,8 +63,8 @@
 						<label>Phone</label>
 						<md-icon class="material-icons dodgerblue-color">phone</md-icon>
 						<input ng-model="vm.contactForm.phoneNumber"  name="phone" required ng-pattern="/^[0-9]{10}$/">
-						<span style="color:brown;" ng-show="(form.contactForm.phone.$touched || vm.submitted) && form.contactForm.phone.$error.required">Phone is mandatory.</span>
-					<span style="color:brown;" ng-show="form.contactForm.phone.$touched  && form.contactForm.phone.$error.pattern">Phone is Invalid.</span>
+						<span class="validation-err-msg" ng-show="(form.contactForm.phone.$touched || vm.submitted) && form.contactForm.phone.$error.required">Phone is mandatory.</span>
+					<span class="validation-err-msg" ng-show="form.contactForm.phone.$touched  && form.contactForm.phone.$error.pattern">Phone is Invalid.</span>
 					</md-input-container>
 					
 					
@@ -72,7 +72,7 @@
 					<div id="captcha" style="position: relative;">
 
 					</div>
-					<span style="color:brown;" ng-show="vm.submitted && !captchaValid">Captcha is Invalid.</span>
+					<span class="validation-err-msg" ng-show="vm.submitted && !captchaValid">Captcha is Invalid.</span>
 					
 
 				</form>
