--- a/app/lp_wizard/views/venue_wizard/crudRoom.template.html
+++ b/app/lp_wizard/views/venue_wizard/crudRoom.template.html
@@ -28,7 +28,7 @@
       				</md-input-container>
       				
       				<md-input-container class="md-block" flex-gt-xs="45" flex-xs="100">
-        				<label>Price Per Room</label>
+        				<label>Price Per Room (in Indian Rupees)</label>
         				 <input ng-model="vm.room.price" placeholder="Price Per Room" type="text">
       				</md-input-container>
       				<span flex-gt-xs hide-xs></span>      				
@@ -46,7 +46,19 @@
 	<div flex-xs="100" flex-gt-xs="100">
 		<wan-select placeholder="" source-data="::vm.lookup.roomFacilities" selected-data="vm.selectedRoomFacilities" select-changed=""></wan-select>
 	</div>	
-</div>            		
+</div> 
+
+					<!--<div layout="row" layout-margin layout-wrap flex-gt-xs="45" flex-xs="100">
+	<h2 class="md-title" flex-xs="100" flex-gt-xs="45">Facilities</h2>
+	<md-input-container flex-xs="100" flex-gt-xs="45">	
+  <md-select ng-model="vm.selectedRoomFacilities" multiple= "true" placeholder="You can choose multiple catering services">
+    <md-option ng-value="roomFacility" ng-repeat="roomFacility in ::vm.lookup.roomFacilities">{{ roomFacility }}</md-option>
+  </md-select>
+</md-input-container>
+<div flex-xs="100" flex-gt-xs="100">
+		<md-chips ng-model="vm.selectedRoomFacilities" readonly="::vm.readonly" md-removable="::vm.removable"></md-chips>
+	</div>	
+</div>  -->         		
             			
             			
             		</div>
